platform-services/janitor-bot/tests/snapshots/integration__pr__argocd-sync-merged.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  - actions:
      - action: wait_for_github_sync
        ran: true
      - action: argocd_sync_changed_apps
        ran: true
    dry_run: false
    name: argocd-sync-merged-pr
external_requests:
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/184/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/184
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/184/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls?state=open
    service: forgejo
  - method: GET
    path: /repos/Accurate0/inf-k8s/commits/9597a0c8769d476162f146d20c26a1801df5e98c
    service: github
  - method: GET
    path: /api/v1/applications
    service: argocd
  - method: POST
    path: /api/v1/applications/janitor-bot/sync
    body: {}
    service: argocd
  - method: POST
    path: /evaluate/v1/boolean
    body:
      context:
        environment: development
        rule_name: manage-ci-image-updater
      entityId: ""
      flagKey: allow_automerging_rules
      namespaceKey: janitor-bot
      reference: ~
    service: flipt
