platform-services/janitor-bot/tests/snapshots/integration__pr__automerge-renovate-lockfile.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  - actions:
      - action: approve
        ran: true
      - action: merge
        ran: true
    dry_run: false
    name: automerge-renovate-lockfile
external_requests:
  - method: GET
    path: /api/v1/repos/anurag/home-gateway/pulls/201/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/home-gateway/pulls/201
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/home-gateway/pulls/201/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/home-gateway/pulls?state=open
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/home-gateway/commits/def0000000000000000000000000000000000000/status
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/home-gateway/pulls/201/reviews
    body:
      body: ~
      comments: ~
      commit_id: ~
      event: APPROVED
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/home-gateway/pulls/201/merge
    body:
      Do: squash
      MergeCommitID: ~
      MergeMessageField: ~
      MergeTitleField: ~
      delete_branch_after_merge: true
      force_merge: ~
      head_commit_id: ~
      merge_when_checks_succeed: ~
    service: forgejo
  - method: POST
    path: /evaluate/v1/boolean
    body:
      context:
        environment: development
        rule_name: manage-renovate
      entityId: ""
      flagKey: allow_automerging_rules
      namespaceKey: janitor-bot
      reference: ~
    service: flipt
