platform-services/janitor-bot/tests/snapshots/integration__pr__automerge-renovate-rust.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  - actions:
      - action: approve
        ran: true
      - action: merge
        ran: true
    dry_run: false
    name: automerge-renovate-rust
external_requests:
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/220/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/220
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/220/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/commits/def0000000000000000000000000000000000000/status
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/pulls/220/reviews
    body:
      body: ~
      comments: ~
      commit_id: ~
      event: APPROVED
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/pulls/220/merge
    body:
      Do: squash
      MergeCommitID: ~
      MergeMessageField: ~
      MergeTitleField: ~
      delete_branch_after_merge: true
      force_merge: ~
      head_commit_id: ~
      merge_when_checks_succeed: ~
    service: forgejo
