platform-services/janitor-bot/tests/snapshots/integration__pr__automerge-renovate-terraform-pending.snap
---
source: tests/integration.rs
expression: snapshot
---
response: []
external_requests:
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/201/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/201
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/201/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls?state=open
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/commits/def1000000000000000000000000000000000000/status
    service: forgejo
  - method: POST
    path: /evaluate/v1/boolean
    body:
      context:
        environment: development
        rule_name: manage-ci-image-updater
      entityId: ""
      flagKey: allow_automerging_rules
      namespaceKey: janitor-bot
      reference: ~
    service: flipt
