platform-services/janitor-bot/tests/snapshots/integration__pr__ci-image-updater-close-superseded.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  - actions:
      - action: remove_labels
        ran: false
      - action: close
        ran: false
      - action: close_other_prs
        ran: true
      - action: remove_labels
        ran: true
      - action: add_labels
        ran: true
      - action: approve
        ran: true
      - action: merge
        ran: true
      - action: add_labels
        ran: false
    dry_run: false
    name: manage-ci-image-updater
external_requests:
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/102/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/102
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/102/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/raw/platform-services/janitor-bot/kustomization.yaml?ref=main
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/102
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls?state=open
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/labels
    service: forgejo
  - method: DELETE
    path: /api/v1/repos/anurag/k8s/issues/99/labels/10
    body:
      updated_at: ~
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/issues/99/comments
    body:
      body: "Superseded by #102"
      updated_at: ~
    service: forgejo
  - method: PATCH
    path: /api/v1/repos/anurag/k8s/issues/99
    body:
      assignee: ~
      assignees: ~
      body: ~
      due_date: ~
      milestone: ~
      ref: ~
      state: closed
      title: ~
      unset_due_date: ~
      updated_at: ~
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/branches/ci-image-updater-janitor-bot-abc123
    service: forgejo
  - method: DELETE
    path: /api/v1/repos/anurag/k8s/branches/ci-image-updater-janitor-bot-abc123
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/102
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/raw/platform-services/janitor-bot/kustomization.yaml?ref=main
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/102/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/labels
    service: forgejo
  - method: DELETE
    path: /api/v1/repos/anurag/k8s/issues/102/labels/10
    body:
      updated_at: ~
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/labels
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/issues/102/labels
    body:
      labels:
        - image-update
        - automated
      updated_at: ~
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/pulls/102/reviews
    body:
      body: "Auto-approved: PR from ci-image-updater"
      comments: ~
      commit_id: ~
      event: APPROVED
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/pulls/102/merge
    body:
      Do: squash
      MergeCommitID: ~
      MergeMessageField: ~
      MergeTitleField: ~
      delete_branch_after_merge: true
      force_merge: ~
      head_commit_id: ~
      merge_when_checks_succeed: ~
    service: forgejo
