platform-services/janitor-bot/tests/snapshots/integration__pr__cleanup-on-merge-branch-gone.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  - actions:
      - action: remove_labels
        ran: true
      - action: delete_branch
        ran: true
    dry_run: false
    name: cleanup-on-merge
external_requests:
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100/files
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/100/reviews
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/labels
    service: forgejo
  - method: DELETE
    path: /api/v1/repos/anurag/k8s/issues/100/labels/7
    body:
      updated_at: ~
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/branches/renovate-foo-2.x
    service: forgejo
